# lao_air_writting

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Readme.md  Readme_Lao.md  label_map.json  pyproject.toml  training_history.npy
datasets/consonants/char_3713/: metadata.txt
datasets/consonants/char_3714/: metadata.txt
model/: label_map.json  training_history.json  training_history.npy
src/augment_image/: main.py  split_data.py
src/collect_data/: main.py
src/lao_air_writting/: api.py  app.py  evaluate_model.py  main.py  test_app.py  test_model.py  test_ocr.py  train_model.py
src/utils/: __init__.py  drawing_util.py  hand_tracking.py  model.py  ocr.py  visualization.py
