[project]
authors = [{name = "sila1404", email = "silamany1404@gmail.com"}]
description = "Add a short description here"
name = "Lao_air_writting"
requires-python = ">= 3.11, <3.12"
version = "0.1.0"
dependencies = ["mediapipe>=0.10.14,<0.11", "tensorflow>=2.14.0,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
lao_air_writting = { path = ".", editable = true }

[tool.pixi.dependencies]
opencv = ">=4.10.0,<5"
numpy = "<2"
scikit-learn = ">=1.6.0,<2"
pillow = ">=11.0.0,<12"
seaborn = ">=0.13.2,<0.14"

[tool.pixi.tasks]
collect = "python ./src/collect_data/main.py"
augment = "python ./src/augment_image/main.py"
evaluate = "python ./src/lao_air_writting/evaluate_model.py"
train = "python ./src/lao_air_writting/train_model.py"
test = "python ./src/lao_air_writting/test_model.py"
start = "python ./src/lao_air_writting/app.py"
split = "python ./src/augment_image/split_data.py"
