[project]
authors = [{name = "sila1404", email = "silamany1404@gmail.com"}]
description = "Add a short description here"
name = "Lao_air_writting"
requires-python = ">= 3.11, <3.12"
version = "0.1.0"
dependencies = [ "certifi", "mediapipe>=0.10.14,<0.11", "tensorflow>=2.14,<2.15", "tensorflow-io-gcs-filesystem==0.31.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
lao_air_writting = { path = ".", editable = true }

[tool.pixi.dependencies]
opencv = ">=4.11.0,<5"
numpy = "<2"
pillow = ">=11.1.0,<12"
seaborn = ">=0.13.2,<0.14"
fastapi = ">=0.115.12,<0.116"
uvicorn = ">=0.34.1,<0.35"
scikit-learn = ">=1.6.1,<2"
albumentations = ">=2.0.5,<3"

[tool.pixi.tasks]
collect = "python ./src/collect_data/main.py"
augment = "python ./src/augment_image/main.py"
eval = "python ./src/lao_air_writting/evaluate_model.py"
train = "python ./src/lao_air_writting/train_model.py"
test = "python ./src/lao_air_writting/test_app.py"
split = "python ./src/augment_image/split_data.py"
api = "uvicorn lao_air_writting.api:app"
