[project]
authors = [{name = "sila1404", email = "silamany1404@gmail.com"}]
description = "Add a short description here"
name = "Lao_air_writting"
requires-python = ">= 3.11, <3.12"
version = "0.1.0"
dependencies = [ "certifi", "mediapipe>=0.10.14,<0.11", "tensorflow>=2.19.0,<3", "python-dotenv>=1.1.0,<2", "torch>=2.7.1,<3", "transformers>=4.52.4,<5", "accelerate>=1.7.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = [ "linux-64"]

[tool.pixi.pypi-dependencies]
lao_air_writting = { path = ".", editable = true }

[tool.pixi.dependencies]
opencv = ">=4.11.0,<5"
numpy = "<2"
pillow = ">=11.1.0,<12"
seaborn = ">=0.13.2,<0.14"
scikit-learn = ">=1.6.1,<2"
albumentations = ">=2.0.5,<3"

[tool.pixi.tasks]
collect = "python ./src/collect_data/main.py"
augment = "python ./src/augment_image/main.py"
eval = "python ./src/lao_air_writting/evaluate_model.py"
train = "python ./src/lao_air_writting/train_model.py"
test = "python ./src/lao_air_writting/test_app.py"
split = "python ./src/augment_image/split_data.py"

[tool.pixi.feature.api.tasks]
api = "uvicorn lao_air_writting.api:app"

[tool.pixi.feature.api.dependencies]
uvicorn = ">=0.34.2,<0.35"
fastapi = ">=0.115.12,<0.116"
pymongo = ">=4.11,<5"
pyngrok = ">=7.2.9,<8"
scipy = ">=1.15.2,<2"

[tool.pixi.environments]
api = ["api"]
